Bug 1801761 - Generate focus actionId in SetFocusInner rather than relying on the caller to provide it r=emilio,hsivonen

This fixes an issue where Element::Focus triggered another focus
event and caused the initial focus event failed to be executed.

Differential Revision: https://phabricator.services.mozilla.com/D163156